# PRS_CSx_LD_panel_mismatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FILE_MANIFEST.txt  GETTING_STARTED.md  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  SUBMISSION_SUMMARY.md  init_repo.sh  pyproject.toml  requirements.txt
data/: sample_results.csv
docs/: model_definitions.md
scripts/: generate_population_stratified_figure.py  run_analysis_eur_afr.sh  run_analysis_eur_eas.sh  run_group_input.sh  run_group_input_eas_eur.sh  run_model1_baseline.sh  run_model2.py  run_model3.py  run_model4.py  run_model5.py  run_phase3_scoring.py  run_phase3_scoring_python.py  run_phase4_analysis.py  run_phase5_figure2_multipanel.py  run_phase5_figure3_population_stratified.py  run_phase5_visualization.py  verify_model1_setup.py
